# crowsong

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  test.py
proto/Calculations.Batch.Grpc.Common/Protos/: canary_calculations_batch_common.proto
proto/Calculations.Grpc.Common/Protos/: canary_calculations_common.proto
proto/StoreAndForward/: canary_store_and_forward_api_service.proto
proto/Utility.ProtobufSharedTypes/Protos/: grpc_tvq.proto  variant.proto
proto/Views/: canary_views_api_service.proto
proto/Views.Grpc.Common/Protos/: canary_views_common.proto
src/: lib.rs  main.rs  python.rs  views_client.rs
