[package]
name = "crowsong"
version = "0.1.0"
edition = "2024"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "crowsong"
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.3", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
dotenv = "0.15.0"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
hyper = { version = "1", features = ["http1", "http2"] }
pyo3 = { version = "0.28.0", optional = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
